package milestone3.domain;

import java.math.BigDecimal;

public class Product {
    private String productId;
    private String name;
    private String description;
    private String category;
    private BigDecimal listPrice;
    private BigDecimal quantityInStock;

    
}
