@startuml ERD-HV-LoFi 

skin rose
skinparam Style StrictUML
skinparam LineType ortho
skinparam monochrome true

class Customer {
    * customerID: Integer <<PK>>
--
    * familyName: String 
    * givenName: String
    * email: String 
    * birthDate: Date 
    * phoneNumber: Integer 
    * location : String 
      favouriteStyle : String 
      favouriteGenre : String 
  
}

class Sale{
    * saleID : Integer <<PK>>
    --
    * date  : Date 
    * buyerID   : Integer <<FK>>
    * time : Time 
    * purchaseTotal  : Double
}

class SaleDetails{
    * saleID : Integer <<FK>>
    * productID : Integer <<FK>>
    --
    * Product_Price : Integer
    * Quantity : Integer
}



class Album {
    * albumName : String <<PK>>
   * albumID : String <<FK>>
--
    * productType : String <<FK>>
    * producerID : Integer <<FK>>
    * genre : String 
    * artist : String 
    * year : Integer 
    * era : String 

}
class Product{
    * productID : Integer <<PK>>
--
    * productType: String <<FK>>
    * productName : String 
    * productPrice : Double 
    * year : Integer 
    * productQuantity : Integer 
    * productDescription : String 
    * unitsInStock : Integer
}

class Vintage {
    * vintageID : String <<PK>>
    * productType : String <<FK>>
--
    * productName : String <<FK>>
    * productPrice : Double
}




SaleDetails }|..|| Product : has
SaleDetails }|..|| Sale : has
Customer ||..o{ Sale : has
Product ||--|{ Album : is of type
Product ||--|{ Vintage : is of type








@enduml 
